# play-checkout

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: pythonapp.yml
backend/: api.py  settings.py  urls.py
backend/checkout/: api_v1.py  apps.py  builders.py  domains.py  schemas.py
backend/checkout/tests/: test_api.py  test_builders.py  test_domains.py
backend/core/: api.py  tests.py
backend/external_services/discount/: client.py  discount_pb2_grpc.py
backend/external_services/tests/discount/: test_client.py
backend/product/: domains.py  repository.py  tests.py
contrib/: env_gen.py
